# ChangeLog for app-cdr/xfburn
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.66 2014/05/11 17:13:55 ssuominen Exp $

  11 May 2014; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.5.2.ebuild:
  amd64/arm/x86 stable

  22 Apr 2014; Samuli Suominen <ssuominen@gentoo.org>
  -xfburn-0.4.3_p20121021.ebuild:
  old

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfburn-0.5.0.ebuild:
  Stable for x86, wrt bug #507432

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xfburn-0.5.0.ebuild:
  Stable for amd64, wrt bug #507432

*xfburn-0.5.2 (11 Apr 2014)

  11 Apr 2014; Samuli Suominen <ssuominen@gentoo.org> +xfburn-0.5.2.ebuild:
  Version bump.

*xfburn-0.5.0 (27 Feb 2014)

  27 Feb 2014; Samuli Suominen <ssuominen@gentoo.org> +xfburn-0.5.0.ebuild:
  Version bump.

  26 Dec 2013; Markus Meier <maekke@gentoo.org> xfburn-0.4.3_p20121021.ebuild:
  add ~arm, bug #489348

  29 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  xfburn-0.4.3_p20121021.ebuild:
  Use AC_CONFIG_HEADERS instead of the obsolete AM_CONFIG_HEADER wrt #467558

  17 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  The people in metadata.xml are upstream developers for receiving bugmail,
  therefore proxy-maintainers doesn't fit here.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  23 Jan 2013; Samuli Suominen <ssuominen@gentoo.org>
  xfburn-0.4.3_p20121021.ebuild:
  USE="udev" by default where visible. Use gentoo mirrors for uri.

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  -xfburn-0.4.3_p20120601.ebuild,
  -files/xfburn-0.4.3-empty_directory_segmentation_fault-2.patch:
  old

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfburn-0.4.3_p20121021.ebuild:
  EAPI=5

  28 Nov 2012; Samuli Suominen <ssuominen@gentoo.org>
  xfburn-0.4.3_p20121021.ebuild:
  Use virtual/udev instead of sys-fs/udev wrt #444398
