@@ -1,20 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST xfburn-0.5.0.tar.bz2 745720 SHA256 76fad0d4256481830d22d4c3d0da9feb1c26c93ad3ed31ab77b9ffdd9eb02ecb SHA512 f0d3fe7adeac280f2023f9a75129d48889f88c39c1e18695a9792f7181f34223f276974b14faa3cd5e08187d665be2b70ec4f2a365c043daba282734b911cf29 WHIRLPOOL 4499ed88be1fa1b82bbc118e9efdc7358534a4d72e67fb6c1eeb508cfa68f2ed069d0c7914ca726d3e1d8a3a1a443e7f07f4752a51eacf6dc3bf0c5ab7a33ee1
 DIST xfburn-0.5.2.tar.bz2 760833 SHA256 63682aab3c30c77e464b2b3b84606d1e1dcefc98e7042072fa09b729d6f84412 SHA512 3c6f27e2c8e5200d620bf32f938a1fb044b371a9fe0b5474ba8c1a487c79a7761e144ec8490f04c2389c96bc980b9f2bdfebce9d24dea30c5caae451bb9dcf5e WHIRLPOOL a88f482d899ecaf89666f34b583b90b02f080ec2dc074f4809b98c8e65a824f3f229dd006c8ccbcd3c580e3c3885bea0a0c9fa04ef8871071b6bc9e237029164
-EBUILD xfburn-0.5.0.ebuild 982 SHA256 9ad6d3e33ae8ad89673b6c051ec3fa1c549a329d8becc417d195297f4dc0b100 SHA512 a7c0d41b731f99b72b4d162a23f9fe1db1d5f4c4ef974393c2f1fe9f1890f8a851580dee3f46787057f3734f51ff031c5223a9d5ca155f577ef79ce502bc56ce WHIRLPOOL acee3cd6c33ba34f32a7a44dfa950385c7eba5175242563395ffeed305db01cc186045f17af1f09232b18092adec72b42a219497c699ed0e6b75426b99785189
 EBUILD xfburn-0.5.2.ebuild 987 SHA256 a99f73bb92eae23831f7b37fa129270fcab4b6328f7488077e093abe2bc7399d SHA512 8356c91a8dac54d54e84de85992b7e4289c9116a2bbb8b00ad6c4c353b237f619eb5c170d5fd2714c176978ec153d3ad0ba26c0331757b43e5a8a5a4d7f4c501 WHIRLPOOL d3d2fdbae84a911cdc9e39f0edd9c1327c5802ba2b2153e0a112e0a4538573852b5e7bcd097b1867d63360d91b30c95b10e90fd2aeb64e3a5deb1bbf70c8b842
-MISC ChangeLog 11261 SHA256 84bb448ca68aa746d7a61397a2412d13cf8d703639f77e77dc32ca1d77b086c7 SHA512 c8af5f03afb9fabf15ba8ff175d6f95e36f3de396b6f8963243dc13e037a18d307cb7e9ba721603a609d20c681ce18f8cca44557e90bf39cea50d2c2a28b6942 WHIRLPOOL c9adc0f25129cdc629f56d7dd1927c658412bd9efcbdd2b6b7b2c876d73cfade70fd53ddfa1ba485cf2dab70d51e79d8e979a588e7d4bdc653a8301e78295f3d
+MISC ChangeLog 11344 SHA256 542fdc36b051cc9515cd08990fd6677b8f2e0173a1f23e04af222dcf5557b441 SHA512 e32253cbccba52eb0a0263d9334c4aa068e90f7abbaa52913654caf310602dd538031c4c8915f5a56211a116f356634db5a8a91479366b9f3af4c407a65efc76 WHIRLPOOL 0c3161b5769400435bcdf2a171bd675de5ea6162435bcba175650fcbfd0323787efb0a52430a408cf90be23fad53df3337b53ab686eabd55208aabcbc71f52e4
 MISC metadata.xml 416 SHA256 2b6481a76d444a68722d1817dff6eaff3d83b1a5de2b8d940153a854f946a070 SHA512 c54da96fe98e8dc7794863ea31e95c3f60ed3883ed275702fabe29bb7cf274be4cbe2c8d6ccef22295a8524c19d4843a9b4b44fa238d7a2640f991fd08155901 WHIRLPOOL 54e5bc56dfb703991542a6e1cde016ec4388ac2a7691f2cc994df7d5b432fe1be670da33aad14b8167311cbcee56375fb6d45462c125801a002338ed5e86cb5c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTb6+fAAoJEEdUh39IaPFNa2wH/i6x8d33gQNjwwJbOUbJdNK7
-1MRsO7DiM5ruSseN2JjG3TQ4wP2qbD1LQR+//g7v24gXcPiH4B76/ZvQLrmvxO+S
-Vf+MSBR5Dbyk1PT5XYplMADuvYjMByVdKn1h8ZJoWxk1LcG720AOD8AgWbt3+uGM
-93cwYroPAM7nAdsW8Y8C3L47fWjgegdk7TY0VvT50ZCUspoHXmOJ8rTgmEpEDZD1
-vw4VsVdguFraujRmM4krPDQhgVJeiBa5AF92Q5nBATCqJIvc3jBl6MQQHwhPIS9s
-HamePm/FEAmlTwpYRVY7poKuxnAQmB+5ISnc72BkVZt/NhmeBXOEJ4zjsqz2lvQ=
-=tX4t
+iQEcBAEBCAAGBQJTb7AWAAoJEEdUh39IaPFN+cAIAKITWa0AwcTwfYpfPCNXpc2B
+q6g7R1j1VBn9VV4fp6twS1BdRYC21mW0rRBc4o57DUQgncLr4mQvrP0jGNwxLp0f
+K8dx7GcN9egp8nvAQDIKy5dsmVwAxj6py5N7RptrxK8HYvB7dT5viJgtIUH8IZJC
+/28VU+uOOE/ftdpD5IiHXdVj52hogE7jB545ii83/8UIY0eiITDdJBpGoQ5yKvql
+nETyCqZqAr+lV2yfdUSWJY/yv50EhlzlVvPewDCyGGeJtbyDR1eapX932lE24+2L
+APbRN+Gr/7pbG0gRseUO2Awo1qeN7aK1Bt8gpRJBGSFSLNKMyuPGaJT9FH+oA8U=
+=S7g5
 -----END PGP SIGNATURE-----
