@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/xfburn
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.66 2014/05/11 17:13:55 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.67 2014/05/11 17:15:55 ssuominen Exp $
+
+  11 May 2014; Samuli Suominen <ssuominen@gentoo.org> -xfburn-0.5.0.ebuild:
+  old
 
   11 May 2014; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.5.2.ebuild:
   amd64/arm/x86 stable
